# online-handmade-market

./: README.md  groups.json  pyproject.toml  task3.md  task4.md  task9.md  task9_copy.md  theory.md  thery.md
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_options_alter_post_counter_views_and_more.py  0003_alter_post_is_published_alter_post_slug.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_image.py  0004_contact.py  0005_version.py  0006_alter_version_product_alter_version_version_name_and_more.py  0007_product_owner.py  0008_product_is_published.py  0009_alter_product_options.py
config/: settings.py  urls.py
templates/: base.html
templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
templates/catalog/: category_list.html  contacts.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  send_us.html
templates/include/: footer.html  header.html  header_blog.html
templates/registration/: login.html
templates/users/: reset_pass.html  user_form.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
